apps/vaultwarden/migrate.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: migrate
  name: migrate
  namespace: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: migrate
  serviceName: migrate
  template:
    metadata:
      labels:
        app: migrate
    spec:
      containers:
      - image: docker.io/alpine:latest
        name: shell
        command: [ "/bin/sh", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
        volumeMounts:
          - name: source
            mountPath: /source
          - name: dest
            mountPath: /dest
      volumes:
        - name: source
          persistentVolumeClaim:
            claimName: vw-data
        - name: dest
          persistentVolumeClaim:
            claimName: vw-data-ceph
      nodeAffinity:
        required:
          nodeSelectorTerms:
          - matchExpressions:
            - key: openebs.io/nodeid
              operator: In
              values:
              - talos-95t-m8m
