apps/vaultwarden/vaultwarden.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  ports:
  - name: web
    port: 80
  selector:
    app: vaultwarden
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: vaultwarden
  name: vaultwarden
  namespace: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
      - image: docker.io/vaultwarden/server:latest
        name: vaultwarden
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
          - name: data
            mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: vw-data
