apps/vaultwarden/vaultwarden.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare"
spec:
  rules:
  - host: vault.ugard.win
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: vaultwarden
              port:
                number: 80
  tls:
  - hosts:
    - vault.ugard.win
    secretName: tls-vault-ingress-http
